--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,12 @@
 
 body {
-  background: pink;
+  background: #5A716A;
+  width: 100%;
+  margin: auto;
+}
+.container {
+  background: #8CDFD6;
+  min-height: 400px;
 }
 
 .jumbotron {
