--- a/views/pages/formSubmission.ejs
+++ b/views/pages/formSubmission.ejs
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-
-    <meta name="description" content="Home">
-    <meta name="author" content="Scott Mosher">
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-
+    <head>
+        <% include ../partials/header.ejs %>
+    </head>
+      
 <body>
+    <% include ../partials/nav.ejs %>
     <h1>Result</h1>
     <p>The result of <%= firstNumber %> <%= operationUsed %> <%= secondNumber %> = <%= result %></p>
 </body>
