--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,12 +10,14 @@
   <% include ../partials/nav.ejs %>
   <div class="container">
     <div id='topHeader' class='text-center'>
-      <h1>Welcome to Node.js Assignments</h1>
+      <h1>Welcome To Node.js Assignments</h1>
     </div>
     <div id='content'>
-      <p>This website is for my programming class at BYU Idaho.  It will contain my node.js assignments</p>
+      <p>This website is for my programming class at BYU Idaho.  It will contain my node.js assignments for the next couple weeks worth of assignments.</p>
+      <p>The menu at the top will show the assignments I have completed so far.</p>
     </div>
   </div>
 
+  <% include ../partials/footer.ejs %>
 </body>
 </html>
