--- a/views/pages/formSubmission.ejs
+++ b/views/pages/formSubmission.ejs
@@ -18,6 +18,7 @@
                 <div class="col-sm-6 right-border">
                     <p>After clicking the "Submit" button, you were sent here through a get request.  In the background the system directed you to this page, then took the information in the GET request and processed it.</p>
                     <p>To the right, you'll be able to see the numbers entered and operation you picked, along with your result.</p>
+                    <a href='\math' class="btn btn-primary">Back to Calculator</a>
                 </div> 
                 <div class='col-sm-6'>
                     <p>The result of <%= firstNumber %> <%= operationUsed %> <%= secondNumber %> = <%= result %></p>
