--- a/views/pages/allClients.ejs
+++ b/views/pages/allClients.ejs
@@ -24,12 +24,38 @@
                 </div>
     
                 <div class='col-sm-6'>
+                    <!-- Pulling an individual's details 
                     <%= clientData[0]['first_name'] %>
+                    -->
 
-                    <!-- Loop through the array send from the request -->
-                    <% for (var client of clientData) {%>
-                        <p><%= client.first_name %></p>
-                        <% };%>
+                    <!-- Create the table to hold the user data -->
+                    <table id="clientDetails" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Phone</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Options</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Loop through the array send from the request -->
+                            <% for (var client of clientData) {%>
+                                <tr>
+                                    <td><%= client.id %></td>
+                                    <td><%= client.first_name %></td>
+                                    <td><%= client.last_name %></td>
+                                    <td><%= client.phone %></td>
+                                    <td><%= client.email %></td>
+                                    <td><a href="/clientDetails?id=<%= client.id %>">Details</a></td>
+                                </tr>
+                                <% };%>
+                                
+                        </tbody>
+                    </table>
+
 
 
                 </div>
