--- a/views/pages/clientsTest.ejs
+++ b/views/pages/clientsTest.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Client Info</title>
+    <title>Clients</title>
     <% include ../partials/header.ejs %>
 
 </head>
@@ -11,18 +11,13 @@
 
     <div class="container">
         <div id='topHeader' class='text-center bottom-border'>
-            <h1>All Clients</h1>
+            <h1>Clients</h1>
         </div>
-
+        <div>
+            <button class="btn btn-primary" onclick=test()>View All</button>
+        </div>
         <div id='content'>
-            <div class="row">
-                <div class="col-sm-6 right-border">
-                    <p>This page displays the result of your shipping calculation.</p>
-                    <p>If you entered an invalid weight, you'll see an error message in place of a total. I accomplished this by using an if/else statement in my ejs file based on the message returned from the json file.</p>
-                    <p>I've also added functionality to take the select option name that the user picked for shipping, such as "first-class-flat-rate-envelope", and replace the "-" characters with a white space, and then capitalized the first letter of each word.</p>
-                    <a href='\postal' class="btn btn-primary">Back to Postal Calculator</a>
-                </div>
-    
+            <div class="row">    
                 <div class='col-sm-6'>
                     <!-- Pulling an individual's details 
                     <%= clientData[0]['first_name'] %>
@@ -62,11 +57,12 @@
                                 
                         </tbody>
                     </table>
-
-
-
                 </div>
-                
+
+            </div>
+
+            <div>
+                <h1>Test</h1>
             </div>
         </div>
     </div>
