--- a/views/pages/clients.ejs
+++ b/views/pages/clients.ejs
@@ -19,15 +19,11 @@
         <div id='content'>
             <div class="row">    
                 <div class='col-sm-6'>
+                    <!-- Contains the ajax responses -->
                     <div id="response">
                         
-                    </div>
+                    </div><!-- End of response -->
                 </div>
-
-            </div>
-
-            <div>
-                <h1>Test</h1>
             </div>
         </div>
     </div>
