--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/postal">Postal Calculator</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/clients">Personal Trainer App</a>
+      </li>
     </ul>
   </div>
 </nav>
