--- a/views/pages/clients.ejs
+++ b/views/pages/clients.ejs
@@ -21,7 +21,7 @@
                 <div class='col-sm-6'>
                     <!-- Contains the ajax responses -->
                     <div id="response">
-                        
+                        <p>Click the "View All" button to get started</p>
                     </div><!-- End of response -->
                 </div>
             </div>
