--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
 <footer class='text-center'>
     <p>Copyright 2020 Scott Mosher</p>
+    <script src="scripts/modalFunctions.js"></script>
 </footer>
