--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,7 +3,7 @@ body {
   background: #5A716A;
   width: 100%;
   margin: auto;
-  overflow:hidden;
+  overflow:scroll;
   display: flex;
   flex-direction: column;
   min-height: 49vw;
@@ -11,6 +11,11 @@ body {
 
 body > *{
   flex-grow: 0;
+}
+
+table {
+  overflow: scroll;
+  display: block;
 }
 
 body > nav + .container {
@@ -75,3 +80,48 @@ form {
     .jumbotron .lang-logo img {
       max-width: 100%; }
 
+
+.responses {
+  /* <overflow: scroll; */
+  padding-left: 5px;
+}
+
+
+/* Modal Styling */
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
