--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,3 +8,4 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 
 <script src="scripts/functions.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
