Worked on POST data.  Still need to complete inserting the assigned workouts

--- a/views/pages/clients.ejs
+++ b/views/pages/clients.ejs
@@ -14,7 +14,10 @@
             <h1 id="pageTitle">Clients</h1>
         </div>
         <div>
+            <% console.log(clientInfo.id) %> 
+
             <button class="btn btn-primary" onclick=getAllClients() id='viewAllClientButton'>View All</button>
+            <button class="btn btn-primary" onclick=addNewClientNeededData() id='viewAllClientButton'>Add New</button>
         </div>
         <div id='content'>
             <div class="row">    
