--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <footer class='text-center'>
     <p>Copyright 2020 Scott Mosher</p>
-    <script src="scripts/modalFunctions.js"></script>
+    <!-- <script src="scripts/modalFunctions.js"></script> -->
 </footer>
