--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,4 +8,6 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 
 <script src="scripts/functions.js"></script>
+<script src="scripts/clientFunctions.js"></script>
+<script src="scripts/ajaxFunctions.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
